--- a/public/css/style.css
+++ b/public/css/style.css
@@ -278,4 +278,20 @@ button {
   .page-break-after {
     page-break-after: always;
   }
+
+  /* --- [추가] 내신 및 삽입 기간 강조 스타일 --- */
+  .table tr.special-period td {
+    /* 연한 주황빛 배경색 */
+    background-color: #fffbe6;
+  }
+
+  .table tr.special-period td:first-child {
+    /* 기간의 시작을 알리는 굵은 왼쪽 테두리 */
+    border-left: 3px solid #f97316;
+  }
+
+  .table tr.special-period td:last-child {
+    /* 기간의 끝을 알리는 굵은 오른쪽 테두리 */
+    border-right: 3px solid #f97316;
+  }
 }
